# kanban-mcp

./: .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  HANDOVER.md  LICENSE  README.md  deploy.sh  docker-compose.yml  entrypoint.sh  git_timeline.py  install.ps1  install.sh  jest.config.js  kanban_cli.py  kanban_export.py  kanban_mcp.py  kanban_web.py  package-lock.json  package.json  pyproject.toml  requirements.txt  timeline_builder.py
.github/workflows/: ci.yml
examples/: mcp.json  settings.json
hooks/: pre-commit  session_start.py  stop.py
kanban_mcp/: __init__.py  cli.py  core.py  export.py  git_timeline.py  setup.py  timeline_builder.py  web.py
kanban_mcp/db/: __init__.py  base.py  mysql_backend.py  sqlite_backend.py
kanban_mcp/hooks/: session_start.py  stop.py
kanban_mcp/migrations/: 001_initial_schema.sql  003_add_embeddings.sql  005_mariadb_compat.sql
kanban_mcp/migrations/mysql/: 001_initial_schema.sql  002_add_fulltext_search.sql  003_add_embeddings.sql  004_add_cascades_and_indexes.sql  005_mariadb_compat.sql
kanban_mcp/migrations/sqlite/: 001_initial_schema.sql
kanban_mcp/static/: app.js  styles.css  timeline.js
kanban_mcp/templates/: index.html
static/: app.js  dragdrop.js  styles.css  timeline.js
templates/: index.html
tests/: Dockerfile.test  Dockerfile.test.dockerignore  conftest.py  docker-compose.test.yml  dragdrop.test.js  functional-test.sh  setup.js  test_db_backend.py  test_docker_setup.py  test_export.py  test_hostile.py  test_integration.py  test_kanban_mcp.py  test_kanban_web.py  test_review_fixes.py  test_setup.py  test_sqlite_backend.py  timeline.test.js
